--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
     }
 
     .map-container {
-      margin-top: 50px;
-      margin-bottom: 50px; /* Espacio para la barra inferior */
-      height: calc(100vh - 100px); /* Altura ajustada del mapa */
+      position: absolute;
+      top: 50px;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
 
     .map {
@@ -352,10 +354,9 @@
       color: #2c3e50;
       padding: 0.5rem;
       z-index: 1000;
-      overflow-x: auto;
-      overflow-y: hidden;
-      white-space: nowrap;
       display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       align-items: center;
       border-top: 1px solid #bdc3c7;
     }
@@ -366,7 +367,10 @@
 
     .legend-content {
       display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       align-items: center;
+      width: 100%;
     }
 
     .legend-item {
@@ -374,13 +378,16 @@
       align-items: center;
       cursor: pointer;
       padding: 0.5rem;
-      margin-right: 1rem;
+      margin: 0.25rem;
       border-radius: 5px;
       transition: background-color 0.2s;
+      background-color: #ffffff;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      min-width: 150px;
     }
 
     .legend-item:hover {
-      background-color: rgba(0, 0, 0, 0.1);
+      background-color: #e0e0e0;
     }
 
     .legend-color-box {
@@ -425,7 +432,7 @@
     /* Media queries para diseño responsive */
     @media (max-width: 768px) {
       header {
-        padding: 0.3rem 0.5rem;
+        padding: 0.5rem 0.5rem;
         font-size: 1rem;
       }
 
@@ -447,6 +454,10 @@
       .leaflet-top.leaflet-right {
         top: 60px;
         right: 10px;
+      }
+
+      .legend-item {
+        min-width: 120px;
       }
     }
 
